# Mercury

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  batch_benchmark.cpp  benchmark.cpp  build_benchmark.cpp  config.txt  dependecies.txt  main.cpp  nn_benchmark.cpp  plots.py
EvoDevo/: Makefile  runtests
EvoDevo/configs/: config copy.default  config.default  config.default.voxel  config.devo  config.voxel
EvoDevo/src/: EvoDevo.h  benchmark.cpp  evpch.cpp  evpch.h  main.cpp  test.cpp
EvoDevo/src/EvoDevo/Core/: Assert.h  Base.h  Log.cpp  Log.h  config.h
EvoDevo/src/EvoDevo/Evolvables/: NNRobot.cpp  NNRobot.h  SoftBody.cpp  SoftBody.h  VoxelRobot.cpp  VoxelRobot.h  delaunay.cpp  knn.cu  knn_kernel.cu  triangulation.h
EvoDevo/src/EvoDevo/Optimizer/: Evaluator.h  Evaluator_impl.hpp  candidate.h  optimizer.h  optimizer_impl.hpp
EvoDevo/src/EvoDevo/Simulator/: Simulator.cu  Simulator.h  devo_kernel.cu  element.cpp  element.h  environment.h  material.h  sim_kernel.cu  sim_kernel_xpbd.cu  softbodysystem.h  vec_math.cuh
EvoDevo/src/EvoDevo/Simulator/temp/: element.cpp  element.h  sim_kernel copy 2.cu  sim_kernel copy 3.cu  sim_kernel copy 4.cu  sim_kernel copy 5.cu  sim_kernel copy 6.cu  sim_kernel copy 7.cu  sim_kernel copy.cu  sim_kernel.cu  sim_kernel_best.cu  sim_kernel_force.cu  sim_kernel_vol.cu  sim_kernel_xpbd.cu  sim_kernel_xpbd2.cu
EvoDevo/src/EvoDevo/Tests/: test_devo.cpp  test_evaluator.cpp  test_evolvables.cpp  test_funcs.cpp  test_integrated.cpp  test_simulator.cpp  test_transfer.cpp  tests.h
EvoDevo/src/EvoDevo/Util/: Instrumentor.h  util.cpp  util.h
Visualizer/: CMakeLists.txt
Visualizer/assets/shaders/: Renderer3D_Line.glsl  Renderer3D_Triangle.glsl  vert.glsl
Visualizer/configs/: config.random  config.random.devo  config.random.video  config.random.voxel  config.verify.file  config.verify.folder  config.verify.video  config.video
Visualizer/src/: AssetManager.cpp  AssetManager.h  Sandbox2D.cpp  Sandbox2D.h  Visualizer.cpp  Visualizer.h  VisualizerApp.cpp
Visualizer/src/Models/: force_mesh.cpp  force_mesh.h  robot_model.cpp  robot_model.h
Visualizer/src/Util/: visualizer_config.h  visualizer_util.cpp  visualizer_util.h
common/: Makefile  test_common.cpp
common/evolvables/: NNRobot.cpp  NNRobot.h  SoftBody.cpp  SoftBody.h  VoxelRobot.cpp  VoxelRobot.h  delaunay.cpp  knn.cu  knn.h  knn_kernel.cu  triangulation.h
common/lib/: libgmpxx.so.4.6.1
common/simulator/: Simulator.cu  Simulator.h  cell.h  devo_kernel.cu  element.h  environment.h  face.h  mass.h  material.h  sim_kernel.cu  softbodysystem.h  spring.h  vec_math.cuh
common/tests/: common_tests.h  plots.py  test_common.cpp  test_common_funcs.cpp  test_devo.cpp  test_evolvables.cpp  test_evolvables.h  test_integrated.cpp  test_integrated.h  test_simulator.cpp  test_simulator.h  test_transfer.cpp  tests.cpp  tests.h
common/util/: config.h  structs.h  util.cpp  util.h
evolvables/: NNRobot.cpp  NNRobot.h  SoftBody.cpp  SoftBody.h  VoxelRobot.cpp  VoxelRobot.h  knn.cu  knn.h  knn_kernel.cu
models/: plane.cpp  plane.h  plane_model.cpp  robot.cpp  robot.h  robot_model.h
optimize/: Makefile  benchmark.cpp  main_optimize.cpp  test_optimize.cpp
optimize/configs/: config.default
optimize/optimizer/: Evaluator.h  Evaluator_impl.h  candidate.h  optimizer.h  optimizer_impl.h
optimize/optimizer/temp/: Evaluator.h  Evaluator_impl.h
optimize/optimizer/util/: optimizer_config.h  optimizer_util.cpp  optimizer_util.h
optimize/optimizer/util/temp/: Evaluator_impl.h
optimize/tests/: opt_tests.h  test_evaluator.cpp  test_evaluator.h  test_opt_funcs.cpp  test_optimize.cpp  tests.h
optimizer/: Evaluator.cpp  Evaluator.h  Evaluator_impl.h  candidate.h  optimizer.cpp  optimizer.h  optimizer_impl.h
renderer/: CMakeLists.txt
renderer/lib/: CMakeLists.txt
renderer/lib/include/glfw/: cmake_install.cmake
renderer/lib/include/glfw/examples/: gears  heightmap  offscreen  simple  wave
renderer/lib/include/glfw/tests/: Makefile  clipboard  cmake_install.cmake  cursor  events  opacity  tearing  timeout  title
renderer/lib/src/: glad.c
renderer/src/: Camera.cpp  Camera.h  EBO.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Shader.cpp  VAO.h  VBO.h
shaders/: frag.glsl
simulator/: Simulator.cu  Simulator.h  element.h  environment.h  mass.h  sim_kernel.cu  spring.h  vec_math.cuh
simulator/src/: Simulator.cu  Simulator.h  environment.h  mass.h  sim_kernel.cu  spring.h
util/: config.h  util.cpp  util.h
visualize/: AssetManager.h  CMakeLists.txt  InputManager.cpp  VideoWriter.h  application.cpp  application.h  main_visualize.cpp
visualize/configs/: config.random  config.random.voxel  config.verify  config.verify.video  config.video
visualize/models/: plane_model.cpp  plane_model.h  robot_model.h
visualize/renderer/lib/: Makefile  cmake_install.cmake
visualize/renderer/lib/include/glad/: glad.h
visualize/renderer/lib/include/glfw/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_uninstall.cmake
visualize/renderer/lib/include/glfw/examples/: Makefile  boing  cmake_install.cmake  particles  sharing  splitview
visualize/renderer/lib/include/glfw/src/: Makefile  cmake_install.cmake
visualize/renderer/lib/include/glfw/tests/: empty  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  reopen  threads  triangle-vulkan  windows
visualize/renderer/src/: AssetManager.h  Camera.cpp  Camera.h  EBO.h  EventSystem.h  InputManager.cpp  InputManager.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  VideoWriter.h  visualizerStructs.h
visualize/util/: visualizer_config.h  visualizer_util.cpp  visualizer_util.h
